# claude-scientific-skills

./: .claude-desktop-mcp-complete-with-reasoner.json  .claude-desktop-mcp-merged.json  .claude-desktop-mcp-without-docker.json  .claude-desktop-mcp.json  .claude-plugin  .cursor-mcp.json  .gitattributes  .gitignore  CLAUDE.md  FINAL-TEST-REPORT.md  LICENSE.md  MCP-CONFIGURATION-SUMMARY.md  MCP-INSTALLATION-GUIDE.md  MCP-TECHNICAL-ASSESSMENT.md  PR_BODY.md  README.md  SKILL.md  claude.md  glda_abstracts.txt  glga_abstracts.txt  glga_brenda_query.py  install-mcp-claude-desktop.sh  install-mcp-safe.sh  install.sh  key_findings_with_citations.md  kfr_summary.py  lipase_analysis.py  lipase_analysis_v2.py  mcp-config.json  ode_bo_workflow.py  research_overview.html  ribavirin_equilibrium_plot.py  ribavirin_equilibrium_report.py  run_si_bold_comments.py  search_smartphone_sleep.py  skills-list.md  smartphone_sleep_literature_summary.md  tca_yield_plot.py  temp_viz_guidelines.md  temp_viz_skill_analysis.md  (+7 more)
research-agent-sdk/: CLAUDE.md  environment.yml  pyproject.toml
research-agent-sdk/research_agent/: __init__.py  __main__.py  config.py  domains.py  orchestrator.py
research-agent-sdk/research_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
research-agent-sdk/research_agent/agents/: __init__.py  definitions.py  prompts.py
research-agent-sdk/research_agent/prompts/: bioinformatics.md  chemistry.md  clinical.md  code_implementer.md  code_validator.md  (+13 more)
research-agent-sdk/tests/: test_definitions.py  test_domains.py  test_prompts.py  test_registry.py
(+777 files in other folders)
